# cordial

./: .gitignore  Cargo.toml
cordial/: .gitignore  Cargo.toml
cordial/cordial_guest/src/: guest.rs
cordial/cordial_host/: Cargo.toml
cordial/cordial_improv/src/: improv.rs  lib.rs
cordial/cordial_memory/src/: lib.rs
cordial/cordial_posture/: Cargo.toml
cordial/cordial_posture/migrations/: 20240113_schema.sql
cordial/cordial_posture/src/: posture.rs
cordial/cordial_recall/: Cargo.toml
cordial/cordial_recall/src/: recall.rs
cordial/counsel/: Cargo.toml
cordial/counsel/src/: counsel.rs
cordial/polite/: Cargo.toml
cordial/polite/src/: polite.rs
cordial/src/: guest.rs  lib.rs  memory.rs  polite.rs
cordial/src/host/: bearing.rs  counsel.rs  eponym.rs  improv.rs  mod.rs  posture.rs  recall.rs
cordial/tests/api/: conduct.rs  features.rs  guest.rs  helpers.rs  host.rs  improv.rs  main.rs  polite.rs
cordial/tests/data/migrations/: bad_schema.sql
cordial_guest/: Cargo.toml
cordial_guest/src/: lib.rs
cordial_host/: Cargo.toml
cordial_host/src/: host.rs  lib.rs
cordial_improv/: Cargo.toml
cordial_memory/: Cargo.toml
cordial_memory/src/: memory.rs
cordial_posture/: Cargo.toml
cordial_posture/src/: lib.rs
cordial_recall/: Cargo.toml
cordial_recall/src/: lib.rs
counsel/: Cargo.toml
counsel/src/: counsel.rs  lib.rs
polite/: Cargo.toml
polite/src/: lib.rs  polite.rs
src/: lib.rs
tests/api/: host.rs  main.rs  polite.rs
