[package]
name = "cordial_improv"
version = "0.1.0"
edition = "2021"

[dependencies]
cordial_guest = { path = "../cordial_guest" }
names = "0.14.0"
passwords = { version = "3.1.16", features = ["common-password", "crypto"] }
polite = { path = "../polite", default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
