[package]
name = "cordial_recall"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
cordial_guest = { path = "../cordial_guest", features = ["sql"] }
cordial_memory = { path = "../cordial_memory" }
cordial_posture = { path = "../cordial_posture" }
polite = { path = "../polite", default-features = false }
sqlx = { version = "0.8.0", features = ["uuid"] }
tracing = "0.1.40"
uuid = "1.7.0"
