[package]
name = "counsel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
cordial_guest = { path = "../cordial_guest", features = ["serial"] }
cordial_improv = { path = "../cordial_improv" }
cordial_memory = { path = "../cordial_memory" }
cordial_recall = { path = "../cordial_recall" }
sqlx = "0.8.0"
tracing = "0.1.40"
uuid = "1.10.0"
