[package]
name = "polite"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["auth", "bin", "byte", "csvs", "hype", "icon", "id", "img", "plot", "req", "route", "serial", "sql", "trace", "urls"]
auth = ["oauth2"]
bin = ["bincode"]
byte = ["byte-unit"]
csvs = ["csv"]
hype = ["hyper", "hyper-util"]
icon = ["dioxus-desktop"]
id = ["uuid"]
img = ["image"]
plot = ["plotters", "plotters-bitmap"]
req = ["reqwest"]
route = ["axum"]
serial = ["serde", "serde_json"]
sql = ["sqlx"]
trace = ["tracing-subscriber"]
urls = ["url"]

[dependencies]
axum = { version = "0.7.4", optional = true }
bincode = { version = "1.3.3", optional = true }
byte-unit = { version = "5.1.4", optional = true }
csv = { version = "1.3.0", optional = true }
dioxus-desktop = { version = "0.4.3", optional = true }
hyper = { version = "1.2.0", optional = true }
hyper-util = { version = "0.1.3", features = ["client-legacy"], optional = true }
image = { version = "0.24.9", optional = true }
oauth2 = { version = "4.4.2", optional = true }
plotters = { version = "0.3.5", optional = true }
plotters-bitmap = { version = "0.3.3", optional = true }
reqwest = { version = "0.11.24", optional = true }
serde = { version = "1.0.197", optional = true }
serde_json = { version = "1.0.114", optional = true }
sqlx = { version = "0.7.3", optional = true }
thiserror = "1.0.57"
tracing-subscriber = { version = "0.3.18", optional = true }
url = { version = "2.5.0", optional = true }
uuid = { version = "1.7.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
